syntax = "proto3";
package rarimo.rarimocore.rarimocore;

option go_package = "github.com/rarimo/rarimo-core/x/rarimocore/types";

message PassportRootUpdate {
  string root = 1;
  string contract_address = 2;
  int64 timestamp = 3;
  uint64 block_height = 4;
}


